--- a/sass/contact/Contact.css
+++ b/sass/contact/Contact.css
@@ -1,18 +1,26 @@
-.contact {
-  width: 100%;
-  min-height: 100vh;
-  background: #FFFFFF;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+.page {
+  width: 90%;
+  padding-top: 20px;
+  min-height: 130vh;
+  background: #ffffff;
+  text-align: center;
 }
-.contact-talk h1 {
+.page h1 {
   font-size: 40px;
   color: #272727;
   font-family: "Nunito", sans-serif;
 }
-.contact-talk-div {
+.page .contact {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap-reverse;
+}
+.page .contact-talk h1 {
+  font-size: 40px;
+  color: #272727;
+  font-family: "Nunito", sans-serif;
+}
+.page .contact-talk-div {
   margin: 25px 0 0 0;
   width: 350px;
   height: 170px;
@@ -24,63 +32,143 @@
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
   border-radius: 30px;
 }
-.contact-talk-div i {
+.page .contact-talk-div i {
   font-size: 35px;
   color: #272727;
 }
-.contact-talk-div h1 {
+.page .contact-talk-div h1 {
   margin: -20px 0 0 0;
   font-size: 20px;
   color: #272727;
   font-family: "Nunito", sans-serif;
 }
-.contact-talk-div P {
+.page .contact-talk-div P {
   margin: -30px 0 0 0;
   font-size: 15px;
   color: #272727;
   font-family: "Nunito", sans-serif;
 }
-.contact-talk-div P a {
+.page .contact-talk-div P a {
   color: #272727;
 }
-.contact-talk-div button {
+.page .contact-talk-div button {
   border: none;
   background: none;
   color: #272727;
   font-size: 15px;
   font-family: "Nunito", sans-serif;
 }
-.contact-talk-div button .fa-arrow-right {
+.page .contact-talk-div button .fa-arrow-right {
   color: #272727;
   font-size: 12px;
 }
-.contact-massage {
-  height: 200px;
+.page .contact-message {
+  width: 40%;
 }
-.contact-massage h1 {
-  font-size: 40px;
-  color: #272727;
-  font-family: "Nunito", sans-serif;
+.page .contact-message-div {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
-.contact-massage-div-main {
-  position: relative;
+.page .contact-message-div button {
+  width: 100%;
   height: 50px;
-  width: 350px;
+  font-size: 20px;
+  color: white;
+  font-family: "Nunito", sans-serif;
+  background: #272727;
+  border-radius: 10px;
+  margin: 30px 0 91px 0;
+}
+.page .contact-message-div-flex > :first-child {
+  margin-right: 10%;
+}
+.page .contact-message-div-flex {
+  margin: 28px 0px 28px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+.page .contact-message-div-flex-main {
+  justify-content: space-around;
+  position: relative;
+  height: 45px;
+  width: 100%;
   border: 2px solid #272727;
   display: flex;
+  border-radius: 10px;
 }
-.contact-massage-div-main p {
-  color: #272727;
+.page .contact-message-div-flex-main p {
+  font-size: 18px;
+  padding: 0 7px 0 7px;
+  color: black;
   font-family: "Nunito", sans-serif;
-  top: 0;
+  bottom: 35px;
+  background: white;
   position: absolute;
+  left: 12px;
 }
-.contact-massage-div-main input {
-  width: 100%;
+.page .contact-message-div-flex-main input {
   border: none;
+  font-size: 16px;
+  margin-left: 20px;
+  width: 100%;
   background: none;
+  outline: none;
+}
+.page .contact-message-div-main {
+  position: relative;
+  height: 45px;
+  width: 100%;
+  border: 2px solid #272727;
+  display: flex;
+  border-radius: 10px;
+}
+.page .contact-message-div-main p {
+  font-size: 18px;
+  padding: 0 7px 0 7px;
+  color: black;
+  font-family: "Nunito", sans-serif;
+  bottom: 35px;
+  background: white;
+  position: absolute;
+  left: 12px;
+}
+.page .contact-message-div-main input {
+  border: none;
+  font-size: 16px;
+  margin-left: 20px;
+  width: 100%;
+  background: none;
+  outline: none;
+}
+.page .contact-message-div .footer-map {
+  width: 100%;
+  border-radius: 20px;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+}
+.page .contact-message-div .footer-map .map {
+  width: 100%;
+  border: #272727;
+  border-radius: 20px;
 }
 
+@media (max-width: 1365px) {
+  .page .contact-message {
+    width: 50%;
+  }
+}
+@media (max-width: 1053px) {
+  .page .contact-message {
+    width: 55%;
+  }
+}
+@media (max-width: 850px) {
+  .page .contact-message {
+    width: 100%;
+  }
+}
 @media (max-width: 350px) {
   .contact-talk {
     width: 100%;
