--- a/sass/portfolio/Portfolio.css
+++ b/sass/portfolio/Portfolio.css
@@ -1,7 +1,7 @@
 .portfolio {
   background: #ffffff;
   width: 100%;
-  min-height: 110vh;
+  height: 525px;
   margin-top: 40px;
   display: flex;
   flex-direction: column;
