--- a/sass/portfolio/Portfolio.scss
+++ b/sass/portfolio/Portfolio.scss
@@ -1,7 +1,7 @@
 .portfolio {
   background: #ffffff;
   width: 100%;
-  min-height: 110vh;
+  height: 525px;
   // text-align: center;
   margin-top: 40px;
   display: flex;
