--- a/sass/contact/Contact.scss
+++ b/sass/contact/Contact.scss
@@ -205,6 +205,7 @@ text-align: center  ;
   .page{
     
     .contact {
+      margin-bottom: 120px;
       &-talk {
         margin-top: 50px;
         // width: 100%;
@@ -225,7 +226,7 @@ text-align: center  ;
 @media (max-width: 550px) {
   .contact {
     &-talk {
-      width: 100%;
+     
       &-div {
         width: 100%;
         
@@ -248,7 +249,7 @@ text-align: center  ;
 @media (max-width: 350px) {
   .contact {
     &-talk {
-      width: 100%;
+      
       &-div {
         width: 100%;
       }
